--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 .gc {
 	-moz-box-sizing: border-box;
     display: inline-block;
-    max-width: 600px;
+    max-width: 650px;
     padding: 0 10px;
     vertical-align: top;
     min-height: 70px;
@@ -47,7 +47,7 @@ body {
 h3.smdp_question {
 	font-size: 14px;
     font-weight: 300;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     text-align: center;
 }
 
@@ -89,4 +89,19 @@ html body div.pg div.gc div.qd span.glyphicon.smdp {
     width: 100%;
     text-align: center;
     margin: 30px 0;
+}
+
+th {
+	min-width: 30px;
+	text-align: center;
+}
+
+td {
+	text-align: center;
+	vertical-align: middle;
+}
+
+td.item {
+	text-align: left;
+	padding-right: 10px;
 }
